--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
 }
 
 .container {
-  background-color: rgba(165, 42, 42, 0.455);
+  background-color: #000000;
   width: 320px;
-  height: 540px;
+  height: 580px;
   margin: 40px auto;
   border-radius: 40px;
   padding: 10px;
@@ -21,14 +21,14 @@
   height: 360px;
 }
 
-.buttonsA {
+.buttonsA, .buttonsB, .buttonsC, .buttonsD, .buttonsE {
   display: flex;
   width: 100%;
   margin: auto;
   justify-content: space-around;
 }
 
-.buttonsA div {
+.buttonsA div, .buttonsB div, .buttonsC div, .buttonsD div, .buttonsE div {
   border: 2px solid black;
   border-radius: 50%;
   width: 60px;
@@ -40,94 +40,56 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #333333;
+  color: #FFFFFF;
 }
 
-.buttonsB {
-  display: flex;
-  width: 100%;
-  margin: auto;
-  justify-content: space-around;
+.buttonsA div:first-child {
+    background-color: #A5A5A5;
+    color: black;
 }
 
-.buttonsB div {
-  border: 2px solid black;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  text-align: center;
-  margin: 5px;
-  font-size: 1.5rem;
-  font-weight: 600;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.buttonsA div:nth-child(2) {
+    background-color: #A5A5A5;
+    color: black;
+    display: flex;
+    flex-direction: ;
 }
 
-.buttonsC {
-  display: flex;
-  width: 100%;
-  margin: auto;
-  justify-content: space-around;
+.buttonsA div:nth-child(3) {
+    background-color: #A5A5A5;
+    color: black;
 }
 
-.buttonsC div {
-  border: 2px solid black;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  text-align: center;
-  margin: 5px;
-  font-size: 1.5rem;
-  font-weight: 600;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.buttonsA div:last-child {
+    background-color: #F1A33C;
+    color: white;
+    font-size: 2rem;
 }
 
-.buttonsD {
-  display: flex;
-  width: 100%;
-  margin: auto;
-  justify-content: space-around;
+.buttonsB div:last-child {
+    background-color: #F1A33C;
+    color: white;
 }
 
-.buttonsD div {
-  border: 2px solid black;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  text-align: center;
-  margin: 5px;
-  font-size: 1.5rem;
-  font-weight: 600;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.buttonsC div:last-child {
+    background-color: #F1A33C;
+    color: white;
 }
 
-.buttonsE {
-  display: flex;
-  width: 100%;
-  margin: auto;
-  justify-content: space-around;
+.buttonsD div:last-child {
+    background-color: #F1A33C;
+    color: white;
 }
 
-.buttonsE div {
-  border: 2px solid black;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  text-align: center;
-  margin: 5px;
-  font-size: 1.5rem;
-  font-weight: 600;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.buttonsD div:last-child {
+    background-color: #F1A33C;
+    color: white;
 }
 
 .buttonsE div:first-child {
-  background-color: aqua;
   width: 45%;
   border-radius: 2rem;
 }
+
+/*  */
